Change map style URL to Stadia Maps

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ button{padding:8px;margin-top:6px;border:none;border-radius:6px;background:#1e90
 </div>
 
 <script>
-const style='https://demotiles.maplibre.org/style.json';
+const style='https://tiles.stadiamaps.com/styles/alidade_smooth.json';
 const map=new maplibregl.Map({
   container:'map',
   style:style,
